[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum_option_pricing"
version = "0.1.0"
description = "Quantum computing approach to option pricing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ayoube Ighissou", email = "ayoubighissou@gmail.com"},
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "qiskit>=0.34.0",
    "qiskit-finance>=0.3.0",
    "pennylane>=0.22.0",
    "matplotlib>=3.4.0",
    "plotly>=5.3.0",
    "seaborn>=0.11.0",
    "streamlit>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "black>=22.1.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
    "mypy>=0.931",
]
test = [
    "pytest>=6.2.5",
    "pytest-cov>=2.12.1",
]

[tool.hatch.build.targets.wheel]
packages = ["quantum_option_pricing"]

[tool.hatch.build.targets.sdist]
include = [
    "quantum_option_pricing",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"