[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum_option_pricing"
version = "0.1.0"
description = "Quantum computing approach to option pricing"
readme = "README.md"
requires-python = ">=3.8,<3.12"  # Qiskit potrebbe avere problemi con Python 3.12
license = {text = "MIT"}
authors = [
    {name = "ayoube ighissou", email = "ayoubighissou@gmail.com"},
]
dependencies = [
    # Core libraries
    "numpy>=1.20.0,<2.0.0",
    "pandas>=1.3.0,<2.0.0",
    "scipy>=1.7.0,<2.0.0",
    
    # Quantum computing libraries - versioni specifiche
    "qiskit>=0.42.0,<0.43.0",  # Ultima versione stabile che non richiede BaseSampler
    "qiskit-aer>=0.12.0,<0.13.0",
    
    # Evita qiskit-finance o limitalo a una versione compatibile
    # "qiskit-finance>=0.3.0,<0.4.0",
    
    # Visualizzazione
    "matplotlib>=3.4.0,<4.0.0",
    "plotly>=5.3.0,<6.0.0",
    "seaborn>=0.11.0,<0.13.0",
    
    # Web application
    "streamlit>=1.10.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5,<8.0.0",
    "black>=22.1.0,<24.0.0",
    "isort>=5.10.1,<6.0.0",
    "flake8>=4.0.1,<7.0.0",
    "mypy>=0.931,<2.0.0",
]
test = [
    "pytest>=6.2.5,<8.0.0",
    "pytest-cov>=2.12.1,<5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["quantum_option_pricing"]

[tool.hatch.build.targets.sdist]
include = [
    "quantum_option_pricing",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"